Source/WebCore/platform/graphics/gtk/DisplayRefreshMonitorGtk.cpp
@@ -40,8 +40,14 @@ DisplayRefreshMonitorGtk::DisplayRefreshMonitorGtk(PlatformDisplayID displayID)
 
 DisplayRefreshMonitorGtk::~DisplayRefreshMonitorGtk()
 {
-    if (m_window)
-        gtk_widget_destroy(m_window);
+    if (!m_window)
+        return;
+
+    auto* frameClock = gtk_widget_get_frame_clock(m_window);
+    ASSERT(frameClock);
+    g_signal_handlers_disconnect_matched(frameClock, G_SIGNAL_MATCH_DATA, 0, 0, nullptr, nullptr, this);
+    gdk_frame_clock_end_updating(frameClock);
+    gtk_widget_destroy(m_window);
 }
 
 static void onFrameClockUpdate(GdkFrameClock*, DisplayRefreshMonitorGtk* monitor)
@@ -60,8 +66,7 @@ bool DisplayRefreshMonitorGtk::requestRefreshCallback()
         gtk_widget_realize(m_window);
 
         auto* frameClock = gtk_widget_get_frame_clock(m_window);
-        if (!frameClock)
-            return false;
+        ASSERT(frameClock);
 
         g_signal_connect(frameClock, "update", G_CALLBACK(onFrameClockUpdate), this);
         gdk_frame_clock_begin_updating(frameClock);
